--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html"> Lasagna </a>
+    <p> Hello and welcome to my first project </p>
+    <p> This project is from the Odin Project about recipes</p>
+    <img src="../images/lasagna.jpg">
+<ul>
+   <li> <a href="./recipes/lasagna.html"> Lasagna </a> </li>
+</ul>
 </body>
 </html>
