--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <h1>Odin Recipes</h1>
     <p> Hello and welcome to my first project </p>
     <p> This project is from the Odin Project about recipes</p>
-    <img src="../images/lasagna.jpg">
+    <img src="./images/food.jpg">
 <ul>
    <li> <a href="./recipes/lasagna.html"> Lasagna </a> </li>
+   <li> <a href="./recipes/chicken.html"> Lasagna </a> </li>
 </ul>
 </body>
 </html>
