Finished the menu in the buttom of the page in all pages

--- a/recipes/calulu.html
+++ b/recipes/calulu.html
@@ -7,30 +7,39 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../images/lasagna.jpg">
+    <img src="../images/calulu.jpg">
     <h2> Description</h2>
-    <p>Making lasagna can be time-consuming, but the results are well worth the wait.
-         You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics.</p>
+    <p>Fish calulu or calulu de peixe is a signature Angolan and Sao Tome fish stew with different vegetables, typically cooked in palm oil. Calulu de peixe is rich in different flavours and spices, and is hailed as one of the most popular Angolan dishes.</p>
     <h2> Ingredients</h2>
-    <p>The Allrecipes community adores this lasagna recipe because it's incredibly customizable, so you can easily alter the ingredient list to suit your needs. If you want to stay true to the original recipe, though, these are the ingredients you'll need to add to your grocery list:</p>
+    <p>The Allrecipes community adores this lasagna recipe because it's incredibly customizable, so you can easily alter the ingredient list to suit your needs. If you want to stay true to the original recipe, though, these are the ingredients you'll need to add to your grocery list.</p>
     <ul>
-        <li> <strong>Meat</strong></li>
-        <li> <strong>Onion and garlic</strong> </li>
-        <li> <strong>Tomato products</strong> </li>
-        <li> <strong>Sugar</strong> </li>
-        <li> <strong>Spices and seasonings</strong> </li>
-        <li> <strong>Lasagna noodles</strong> </li>
-        <li> <strong>Cheeses</strong> </li>
-        <li> <strong>Eggs</strong> </li>
+        <li> <strong>Codfish fillets, cut into large bite-sized pieces - 2 lbs</strong></li>
+        <li> <strong>Onion, finely chopped - 1</strong> </li>
+        <li> <strong>Garlic cloves, minced - 3 to 4</strong> </li>
+        <li> <strong>Medium-sized tomatoes, diced - 3 to 4</strong> </li>
+        <li> <strong>Okras, stems removed and chopped diagonally - 8 pieces</strong> </li>
+        <li> <strong>Spinach (you can substitute kale, sweet potato leaves, collard greens or cassava leaves) - 1 lb</strong> </li>
+        <li> <strong>Red palm oil - ¼ cup</strong> </li>
+        <li> <strong>Eggplant, diced into cubes - 1 cup</strong> </li>
+        <li> <strong>Pepper - to taste</strong> </li>
     </ul>
     <h2> Steps</h2>
     <ol>
-        <li>Make the meat sauce.</li>
-        <li>Cook the noodles.</li>
-        <li>Make the ricotta mixture.</li>
-        <li>Layer the lasagna according to the recipe instructions.</li>
-        <li>Cover with foil and bake.</li>
-        <li>Let the lasagna rest before serving.</li>
+        <li>Before preparing the ingredients, place the codfish into a bowl and season with salt and lemon juice on each piece. Set it aside to marinate for 20 to 30 minutes and prepare everything else.</li>
+        <li>In a pot, heat the palm oil on a medium-high flame. When ready, saute the garlic and onions for a few minutes until softened.</li>
+        <li>Add the eggplant, tomato, okra, bell pepper, and bay leaf into the pot. Saute them for a few minutes until everything is nicely incorporated.</li>
+        <li>When done, add the spinach or green leaves you have into the pot and give it a gentle stir to mix everything. Then, add a cup of water (or you can also use vegetable broth) onto the pot.</li>
+        <li>Add in the marinated fish with the other ingredients, like making stew or soup. You can also start layering the fish first before the ingredients.</li>
+        <li>Once the fish is added, cover the pot, then lower the heat. Let the calulu cook for 15 to 20 minutes.</li>
+        <li>After 15 to 20 minutes, lower the heat until the stew only simmers. Uncover the pot then give it a stir.</li>
+        <li>If you want a thicker consistency, add the arrowroot or flour to the mixture. Mix it and cook the calulu again for another 5 minutes until the soup thickens.</li>
+        <li>Turn off the heat, then serve the calulu on a plate or bowl. Serve it with rice if preferred, then enjoy!</li>
     </ol>
+    <strong>What do you want to go next?</strong> 
+    <ul>
+        <li> <a href="../index.html"> Lasagna </a> </li>
+        <li> <a href="./recipes/crab_salad.html"> Lasagna </a> </li>
+        <li> <a href="./recipes/calulu.html"> Lasagna </a> </li>
+     </ul>
 </body>
 </html>
