--- a/recipes/crab_salad.html
+++ b/recipes/crab_salad.html
@@ -25,5 +25,11 @@
         <li>Chill overnight.</li>
         <li>Stir before serving.</li>
     </ol>
+    <strong>What do you want to go next?</strong> 
+    <ul>
+        <li> <a href="../index.html"> Lasagna </a> </li>
+        <li> <a href="./recipes/crab_salad.html"> Lasagna </a> </li>
+        <li> <a href="./recipes/calulu.html"> Lasagna </a> </li>
+     </ul>
 </body>
 </html>
