--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <p> Hello and welcome to my first project </p>
     <p> This project is from the Odin Project about recipes</p>
     <img src="./images/food.jpg">
-<ul>
-   <li> <a href="./recipes/lasagna.html"> Lasagna </a> </li>
-   <li> <a href="./recipes/chicken.html"> Lasagna </a> </li>
-</ul>
+
+    <strong>What do you want to go next?</strong> 
+    <ul>
+     <li> <a href="./recipes/lasagna.html"> Lasagna </a> </li>
+    <li> <a href="./recipes/crab_salad.html"> Lasagna </a> </li>
+    <li> <a href="./recipes/calulu.html"> Lasagna </a> </li>
+    </ul>
+
 </body>
 </html>
