--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -32,5 +32,11 @@
         <li>Cover with foil and bake.</li>
         <li>Let the lasagna rest before serving.</li>
     </ol>
+    <strong>What do you want to go next?</strong> 
+    <ul>
+        <li> <a href="../index.html"> Lasagna </a> </li>
+        <li> <a href="./recipes/crab_salad.html"> Lasagna </a> </li>
+        <li> <a href="./recipes/calulu.html"> Lasagna </a> </li>
+     </ul>
 </body>
 </html>
