Changed the error in the buttom  menu

--- a/recipes/crab_salad.html
+++ b/recipes/crab_salad.html
@@ -27,9 +27,9 @@
     </ol>
     <strong>What do you want to go next?</strong> 
     <ul>
-        <li> <a href="../index.html"> Lasagna </a> </li>
-        <li> <a href="./recipes/crab_salad.html"> Lasagna </a> </li>
-        <li> <a href="./recipes/calulu.html"> Lasagna </a> </li>
+        <li> <a href="../index.html"> Home </a> </li>
+        <li> <a href="./recipes/lasagna.html"> Lasagna </a> </li>
+        <li> <a href="./recipes/calulu.html"> Calulu </a> </li>
      </ul>
 </body>
 </html>
