--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <strong>What do you want to go next?</strong> 
     <ul>
      <li> <a href="./recipes/lasagna.html"> Lasagna </a> </li>
-    <li> <a href="./recipes/crab_salad.html"> Lasagna </a> </li>
-    <li> <a href="./recipes/calulu.html"> Lasagna </a> </li>
+    <li> <a href="./recipes/crab_salad.html"> Crab Salad  </a> </li>
+    <li> <a href="./recipes/calulu.html"> Calulu </a> </li>
     </ul>
 
 </body>
