--- a/recipes/calulu.html
+++ b/recipes/calulu.html
@@ -37,9 +37,9 @@
     </ol>
     <strong>What do you want to go next?</strong> 
     <ul>
-        <li> <a href="../index.html"> Lasagna </a> </li>
-        <li> <a href="./recipes/crab_salad.html"> Lasagna </a> </li>
-        <li> <a href="./recipes/calulu.html"> Lasagna </a> </li>
+        <li> <a href="../index.html"> Home </a> </li>
+        <li> <a href="./recipes/lasagna.html"> Lasagna </a> </li>
+        <li> <a href="./recipes/crab_salad.html"> Crab Salad </a> </li>
      </ul>
 </body>
 </html>
