Just put the paragraph in the sentece, so it stays bellow the image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p> This project is from the Odin Project about recipes</p>
     <img src="./images/food.jpg">
 
-    <strong>What do you want to go next?</strong> 
+    <p><strong>What do you want to go next?</strong></p> 
     <ul>
      <li> <a href="./recipes/lasagna.html"> Lasagna </a> </li>
     <li> <a href="./recipes/crab_salad.html"> Crab Salad  </a> </li>
