--- a/recipes/calulu.html
+++ b/recipes/calulu.html
@@ -35,7 +35,7 @@
         <li>If you want a thicker consistency, add the arrowroot or flour to the mixture. Mix it and cook the calulu again for another 5 minutes until the soup thickens.</li>
         <li>Turn off the heat, then serve the calulu on a plate or bowl. Serve it with rice if preferred, then enjoy!</li>
     </ol>
-    <strong>What do you want to go next?</strong> 
+    <p><strong>What do you want to go next?</strong></p> 
     <ul>
         <li> <a href="../index.html"> Home </a> </li>
         <li> <a href="./recipes/lasagna.html"> Lasagna </a> </li>
