--- a/recipes/crab_salad.html
+++ b/recipes/crab_salad.html
@@ -25,7 +25,7 @@
         <li>Chill overnight.</li>
         <li>Stir before serving.</li>
     </ol>
-    <strong>What do you want to go next?</strong> 
+    <p><strong>What do you want to go next?</strong></p> 
     <ul>
         <li> <a href="../index.html"> Home </a> </li>
         <li> <a href="./recipes/lasagna.html"> Lasagna </a> </li>
