--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -32,7 +32,7 @@
         <li>Cover with foil and bake.</li>
         <li>Let the lasagna rest before serving.</li>
     </ol>
-    <strong>What do you want to go next?</strong> 
+    <p><strong>What do you want to go next?</strong></p> 
     <ul>
         <li> <a href="../index.html"> Home </a> </li>
         <li> <a href="./recipes/crab_salad.html"> Crab Salad  </a> </li>
