Fix the error with the buttom menu and updated h1 and the tittle

--- a/recipes/crab_salad.html
+++ b/recipes/crab_salad.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna</title>
+    <title>Crab Salad</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1>Crab Salad</h1>
     <img src="../images/crab-salad.jpg">
     <h2> Description</h2>
     <p>Making crab salad at home couldn't be easier. You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics.</p>
@@ -28,8 +28,8 @@
     <p><strong>What do you want to go next?</strong></p> 
     <ul>
         <li> <a href="../index.html"> Home </a> </li>
-        <li> <a href="./recipes/lasagna.html"> Lasagna </a> </li>
-        <li> <a href="./recipes/calulu.html"> Calulu </a> </li>
+        <li> <a href="./lasagna.html"> Lasagna </a> </li>
+        <li> <a href="./calulu.html"> Calulu </a> </li>
      </ul>
 </body>
 </html>
