--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -35,8 +35,8 @@
     <p><strong>What do you want to go next?</strong></p> 
     <ul>
         <li> <a href="../index.html"> Home </a> </li>
-        <li> <a href="./recipes/crab_salad.html"> Crab Salad  </a> </li>
-        <li> <a href="./recipes/calulu.html"> Calulu </a> </li>
+        <li> <a href="./crab_salad.html"> Crab Salad  </a> </li>
+        <li> <a href="./calulu.html"> Calulu </a> </li>
      </ul>
 </body>
 </html>
