--- a/recipes/calulu.html
+++ b/recipes/calulu.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna</title>
+    <title>Calulu</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1>Calulu</h1>
     <img src="../images/calulu.jpg">
     <h2> Description</h2>
     <p>Fish calulu or calulu de peixe is a signature Angolan and Sao Tome fish stew with different vegetables, typically cooked in palm oil. Calulu de peixe is rich in different flavours and spices, and is hailed as one of the most popular Angolan dishes.</p>
@@ -38,8 +38,8 @@
     <p><strong>What do you want to go next?</strong></p> 
     <ul>
         <li> <a href="../index.html"> Home </a> </li>
-        <li> <a href="./recipes/lasagna.html"> Lasagna </a> </li>
-        <li> <a href="./recipes/crab_salad.html"> Crab Salad </a> </li>
+        <li> <a href="./lasagna.html"> Lasagna </a> </li>
+        <li> <a href="./crab_salad.html"> Crab Salad </a> </li>
      </ul>
 </body>
 </html>
